test/src/e2e_vm_tests/test_programs/should_fail/enum_variant_unit/src/main.sw
script;

fn main() -> u64 {
    let n: Option<u64> = Option::None(); 
    5
}
